# DeFillet

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MeshVoronoi3d.cpp  MeshVoronoi3d.h  README.md  bin_seg.ply  common.h  config.json  data_convert.h  defillet.cpp  defillet.h  defillet1.cpp  defillet1.h  detector_config.json  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  fillet_seg.cpp  fillet_seg.h  gcp.cpp  gcp.h  graph_cut_for_mesh.cpp  io.h  knn.cpp  knn.h  main.cpp  optimize.cpp  optimize.h  output.txt  output4.ply  plot_bin_fig.py  segment.cpp  test.cpp  test_KroneckerProduct.cpp  test_cg_solver.cpp  test_cgal_surface_mesh.cpp  (+9 more)
app/: Structuring.cpp  compose.cpp  cur.cpp  decompose.cpp  defillet.cpp  defillet1.cpp  eigen_value.cpp  eval.cpp  fillet_seg.cpp  gc.cpp  geo.cpp  gui.cpp  main_seg.cpp  my_picker.cpp  my_picker.h  my_viewer.cpp  my_viewer.h  readIV.cpp  read_clr.cpp  scoring.cpp  test.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp  test_assimp.cpp  vor_cor_sites.cpp
cli/: detector_cli.cpp
data/: 091_wheel_assembly_part.stl  22181_526fb582_0.ply  22181_526fb582_0_remesh.ply
dkm/: dkm_parallel.hpp
gcp/: CMakeLists.txt  GCoptimization.cpp  GCoptimization.h  block.h  energy.h
geodesic/: BaseModel.cpp  BaseModel.h  CMakeLists.txt  Chen_Han.cpp  Chen_Han.h  DistanceApproach.cpp  DistanceApproach.h  ExactDGPMethod.cpp  RichModel.cpp  RichModel.h  VectorOperations.cpp  Xin_Wang.cpp  main.cpp
include/: axis_optimizer.h  decompose.h  fillet_detector.h  gcp.h  knn4d.h  mean_shift.h  nanoflann.hpp  preliminary_fillet_selector.h  utils.h  voronoi3d.h
src/: MeshVoronoi3d.cpp  MeshVoronoi3d.h  axis_optimizer.cpp  decompose.cpp  defillet.cpp  defillet.h  defillet_v2.cpp  defillet_v2.h  fillet_detector.cpp  fillet_seg.cpp  fillet_seg.h  fillet_seg_v2.cpp  fillet_seg_v2.h  fillet_seg_v3.cpp  fillet_seg_v3.h  fillet_seg_v4.cpp  fillet_seg_v4.h  fillet_seg_v5.cpp  fillet_seg_v5.h  fillet_seg_v8.cpp  fillet_seg_v8.h  gc.cpp  gcp.h  geo.cpp  io.h  kernel.h  knn.cpp  knn.h  knn4d.cpp  mean_shift.cpp  mean_shift.h  preliminary_fillet_selector.cpp  scoring.cpp  surafce_mesh_segmenter.cpp  surafce_mesh_segmenter.h  surface_mesh_segmenter.cpp  util.h  utils.cpp  viewer.cpp  viewer.h  (+2 more)
test/: test_decompose.cpp  test_pfs.cpp  test_seg.cpp
